# youtube-ai-briefer-v2-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  youtube-helper.ts
src-tauri/: Cargo.toml  ai-brain.exe.REMOVED.git-id  condensa_prompt.example.txt  resume_prompt.example.txt  tauri.conf.json
src-tauri/binaries/: ai-brain-x86_64-pc-windows-msvc.exe.REMOVED.git-id
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main ws-working.rs  main.rs  websocket_handler.rs
src/components/: BackendFeedback.vue  BackendStatus.vue  ClipboardBtn.vue  CopyBtns.vue  Modal.vue  RagChat.vue  SettingsBtn.vue  VideoInfo.vue
src/composables/: useClipboard.ts  useWebSocket.ts
