[package]
name = "youtube-ia-briefer-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ch3my"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = [ "shell-open", "shell-sidecar", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
